--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -17,7 +17,7 @@ train-model:
     - echo "$CI_PROJECT_PATH"
     - git commit -m "Trained successfully"
     - git remote show origin
-    - git remote set-url --push origin git@gitlab.com:$CI_PROJECT_PATH
+    - git remote set-url --push origin git@gitlab.com-fpt:$CI_PROJECT_PATH
     - git remote show origin
     - git push --follow-tags origin HEAD:$CI_COMMIT_REF_NAME -o ci.skip
   tags:
