--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -5,58 +5,60 @@ train-model:
   stage: train
   script:
     - echo "## Training...."
-    - echo "$CI_PROJECT_PATH"
-    - echo "$CI_COMMIT_BRANCH" 
-    - echo "$CI_PROJECT_DIR" 
-    - echo "$CI_BUILDS_DIR" 
+    - echo "$CI_PROJECT_PATH env:CI_PROJECT_PATH"
+    - echo "$CI_COMMIT_BRANCH env:CI_COMMIT_BRANCH" 
+    - echo "$CI_PROJECT_DIR env:CI_PROJECT_DIR" 
+    - echo "$CI_BUILDS_DIR env:CI_BUILDS_DIR" 
     
-    #Unzip
-    - tar -xf traindata.zip
-    - cd labels && move *.txt ..\imgs && cd ..
+    # #Unzip
+    # - tar -xf traindata.zip
+    # - cd labels 
+    # - move *.txt ..\imgs 
+    # - cd ..
 
-    - cd D:\Docker\AVC-EdgeTPU-Compiler\edgetpu-compiler\x64\data
-    - rmdir /Q /S imgs
+    # - cd D:\Docker\AVC-EdgeTPU-Compiler\edgetpu-compiler\x64\data
+    # - rmdir /Q /S imgs
 
-    - move %CI_BUILDS_DIR%/imgs imgs
-    - cd ..
-    - call conda activate yolo2keras_env
+    # - move env:CI_BUILDS_DIR/imgs imgs
+    # - cd ..
+    # - call conda activate yolo2keras_env
 
-    #Create_train_test_file
-    - python create_train_test.py -tp 0.2
-    #get_applying_id
-    - for /F %I in ('curl https://avc-api.azurewebsites.net/api/model/applyingid') do set APPLYING_ID=%I
+    # #Create_train_test_file
+    # - python create_train_test.py -tp 0.2
+    # #get_applying_id
+    # - for /F %I in ('curl https://avc-api.azurewebsites.net/api/model/applyingid') do set APPLYING_ID=%I
 
-    #Train_model
-    - copy D:\Docker\AVC-EdgeTPU-Compiler\edgetpu-compiler\models\%APPLYING_ID%.weights .
-    - darknet detector train data/custom.data coco-tiny-v3-relu.cfg %APPLYING_ID%.weights -map -clear
+    # #Train_model
+    # - copy D:\Docker\AVC-EdgeTPU-Compiler\edgetpu-compiler\models\%APPLYING_ID%.weights .
+    # - darknet detector train data/custom.data coco-tiny-v3-relu.cfg %APPLYING_ID%.weights -map -clear
 
-    - cd ..
-    - move x64\backup\coco-tiny-v3-relu_best.weights models\%CI_COMMIT_BRANCH%.weights
-    - cd keras-yolo3
-    - python convert.py coco-tiny-v3-relu.cfg ..\models\%CI_COMMIT_BRANCH%.weights avc.h5
+    # - cd ..
+    # - move x64\backup\coco-tiny-v3-relu_best.weights models\%CI_COMMIT_BRANCH%.weights
+    # - cd keras-yolo3
+    # - python convert.py coco-tiny-v3-relu.cfg ..\models\%CI_COMMIT_BRANCH%.weights avc.h5
 
-    - call conda deactivate
+    # - call conda deactivate
 
-    - call conda activate tflite_env
-    #Convert_tflite
-    - python keras_to_tflite_quant.py avc.h5 ..\avc_model.tflite
+    # - call conda activate tflite_env
+    # #Convert_tflite
+    # - python keras_to_tflite_quant.py avc.h5 ..\avc_model.tflite
 
-    - call conda deactivate
+    # - call conda deactivate
 
-    - cd ..
-    - docker run -it --rm -v %cd%:/home/edgetpu edgetpu-compiler-avc edgetpu_compiler avc_model.tflite
-    - move avc_model_edgetpu.tflite %CI_BUILDS_DIR%\%CI_COMMIT_BRANCH%.tflite
+    # - cd ..
+    # - docker run -it --rm -v %cd%:/home/edgetpu edgetpu-compiler-avc edgetpu_compiler avc_model.tflite
+    # - move avc_model_edgetpu.tflite %CI_BUILDS_DIR%\%CI_COMMIT_BRANCH%.tflite
 
-    - del avc_model.tflite
+    # - del avc_model.tflite
 
 
-    # Push new model back to the repository.
-    - cd $CI_BUILDS_DIR
-    - git add .
-    - git commit -m "Trained successfully"
-    - git remote show origin
-    - git remote set-url --push origin git@gitlab.com:$CI_PROJECT_PATH
-    - git remote show origin
-    - git push --follow-tags origin HEAD:$CI_COMMIT_REF_NAME -o ci.skip
+    # # Push new model back to the repository.
+    # - cd $CI_BUILDS_DIR
+    # - git add .
+    # - git commit -m "Trained successfully"
+    # - git remote show origin
+    # - git remote set-url --push origin git@gitlab.com:$CI_PROJECT_PATH
+    # - git remote show origin
+    # - git push --follow-tags origin HEAD:$CI_COMMIT_REF_NAME -o ci.skip
   tags:
     - worker
