--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,5 +1,6 @@
 stages:
   - train
+  - clean_up
 
 train-model:
   stage: train
@@ -66,7 +67,7 @@ train-model:
 
 
 handle_error:
-  stage: train
+  stage: clean_up
   script:
     - echo "Clear máy cho Sang"
     - echo "Call Train Failed API here"
