--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -63,7 +63,7 @@ train-model:
     - git remote show origin
     # - git remote rm origin
     - git remote set-url --push origin git@gitlab.com:$CI_PROJECT_PATH
-    - git remote set-url --fetch origin git@gitlab.com:$CI_PROJECT_PATH
+    # - git remote set-url --fetch origin git@gitlab.com:$CI_PROJECT_PATH
     - git remote show origin
     - git push --follow-tags origin HEAD:$CI_COMMIT_REF_NAME -o ci.skip
     - Invoke-WebRequest -URI "https://avc-api.azurewebsites.net/api/model/$CI_COMMIT_BRANCH/succession" -UseBasicParsing -Method Put
