--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -88,20 +88,22 @@ handle_error:
     - default
     - master
 
-before_script:
-  - apt-get update -qq
-  - apt-get install -qq git
-  # Setup SSH deploy keys
-  - 'which ssh-agent || ( apt-get install -qq openssh-client )'
-  - eval $(ssh-agent -s)
-  - ssh-add <(echo "$SSH_PRIVATE_KEY")
-  - mkdir -p ~/.ssh
-  - '[[ -f /.dockerenv ]] && echo -e "Host *\n\tStrictHostKeyChecking no\n\n" > ~/.ssh/config'
+  
  
 
 test_git: 
   stage: train
   script: 
+    - apt-get update -qq
+    - apt-get install -qq git
+    # Setup SSH deploy keys
+    - which ssh-agent
+    - eval $(ssh-agent -s)
+    - ssh-add <(echo "$SSH_PRIVATE_KEY")
+    - mkdir -p ~/.ssh
+    - '[[ -f /.dockerenv ]]
+    - echo -e "Host *\n\tStrictHostKeyChecking no\n\n" > ~/.ssh/config'
+
     - ssh-keyscan gitlab.com
     - echo "Hello" >> test.txt
     - git add .
