--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -99,7 +99,7 @@ test_git:
     # Setup SSH deploy keys
     - which ssh-agent
     - eval $(ssh-agent -s)
-    - cmd /c 'ssh-add <(echo "$SSH_PRIVATE_KEY")''
+    - cmd /c 'ssh-add <(echo "$SSH_PRIVATE_KEY")'
     - mkdir -p ~/.ssh
     - '[[ -f /.dockerenv ]]
     - echo -e "Host *\n\tStrictHostKeyChecking no\n\n" > ~/.ssh/config'
