--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -94,11 +94,18 @@ handle_error:
 test_git: 
   stage: train
   script: 
-    - cmd /c 'which ssh-agent || ( apt-get install -qq openssh-client )'
+
+    - cmd /c'which ssh-agent || ( apt-get update -y && apt-get install openssh-client git -y )'
+
     - eval $(ssh-agent -s)
-    - cmd /c 'ssh-add <(echo "$SSH_PRIVATE_KEY")''
+
+    - echo "$SSH_PRIVATE_KEY" | tr -d '\r' | ssh-add -
+
     - mkdir -p ~/.ssh
-    - cmd /c '[[ -f /.dockerenv ]] && echo -e "Host *\n\tStrictHostKeyChecking no\n\n" > ~/.ssh/config'
+    - chmod 700 ~/.ssh
+    - ssh-keyscan gitlab.com >> ~/.ssh/known_hosts
+    - chmod 644 ~/.ssh/known_hosts
+
 
     - ssh-keyscan gitlab.com
     - echo "Hello" >> test.txt
