--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -105,7 +105,7 @@ test_git:
     - chmod 700 ~/.ssh
     - ssh-keyscan gitlab.com >> ~/.ssh/known_hosts
     - chmod 644 ~/.ssh/known_hosts
-
+    - ssh git@gitlab.com
 
     - ssh-keyscan gitlab.com
     - echo "Hello" >> test.txt
