--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -97,7 +97,7 @@ test_git:
 
     - cmd /c 'ssh-agent'
 
-    - bash /c 'eval $(ssh-agent -s)''
+    - bash /c 'eval $(ssh-agent -s)'
 
     - echo "$SSH_PRIVATE_KEY" | tr -d '\r' | ssh-add -
 
