--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -108,7 +108,7 @@ test_git:
     - git add .
     - git commit -m "Trained successfully"
     - git remote show origin
-    - git remote set-url --push origin git@gitlab.com:$CI_PROJECT_PATH
+    - git remote set-url --push origin gitlab.com:$CI_PROJECT_PATH
     - git push --follow-tags origin HEAD:$CI_COMMIT_REF_NAME -o ci.skip
   tags:
     - kay
