--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -105,10 +105,11 @@ test_git:
 
     #- ssh-keyscan gitlab.com
     - echo "Hello" >> test.txt
+    - ssh-keyscan gitlab.com
     - git add .
     - git commit -m "Trained successfully"
     - git remote show origin
-    - git remote set-url --push origin gitlab.com:$CI_PROJECT_PATH
+    - git remote set-url --push origin git@gitlab.com:$CI_PROJECT_PATH
     - git push --follow-tags origin HEAD:$CI_COMMIT_REF_NAME -o ci.skip
   tags:
     - kay
