--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -104,6 +104,7 @@ test_git:
     #- chmod 644 ~/.ssh/known_hosts
 
     #- ssh-keyscan gitlab.com
+    - Start-Service ssh-agent
     - echo "Hello" >> test.txt
     - ssh-keyscan gitlab.com
     - echo $CI_COMMIT_REF_NAME
