--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -105,6 +105,7 @@ test_git:
 
     #- ssh-keyscan gitlab.com
     - Start-Service ssh-agent
+    - git config --global core.sshCommand C:/Windows/System32/OpenSSH/ssh.exe
     - ssh-add C:\Users\Kay\.ssh\id_rsa
     - echo "Hello" >> test.txt
     - ssh-keyscan gitlab.com
