--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -95,6 +95,7 @@ test_git:
   stage: train
   script: 
     - git checkout $CI_COMMIT_REF_NAME
+    - git pull
 
   #  - cmd /c 'ssh-agent'
    # - echo "$SSH_PRIVATE_KEY" | tr -d '\r' | ssh-add -
